k8s/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hide-lv-mounter
  namespace: hide-system
spec:
  selector:
    matchLabels:
      app: hide-lv-mounter
  template:
    metadata:
      labels:
        app: hide-lv-mounter
    spec:
      hostPID: true
      hostNetwork: true
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: hide-lv-mounter
          image: "hideregistry.azurecr.io/hide-server-util-lvm:latest"
          securityContext:
            privileged: true
          volumeMounts:
            - name: dev
              mountPath: /dev
            - name: sys
              mountPath: /sys
            - name: proc
              mountPath: /proc
            - name: host-volumes
              mountPath: /host-volumes
              mountPropagation: Bidirectional
          command:
            - /bin/bash
            - -c
            - |
              [...]
      resources:
        limits:
          cpu: 100m
          memory: 256Mi
        requests:
          cpu: 100m
          memory: 256Mi
      volumes:
        - name: dev
          hostPath:
            path: /dev
        - name: sys
          hostPath:
            path: /sys
        - name: proc
          hostPath:
            path: /proc
        - name: host-volumes
          hostPath:
            path: /data/workspace-volumes
            type: DirectoryOrCreate
